# cura-binary-data

./: .gitignore  CMakeLists.txt  GitVersion.yml  README.md  conandata.yml  conanfile.py  create_symlinks.sh
.github/workflow/: conan-package.yml
.github/workflows/: conan-package.yml
cura/resources/firmware/: MarlinChiron.hex  MarlinHephestos2.hex  MarlinUltimaker-115200-dual.hex  MarlinUltimaker-115200.hex  MarlinUltimaker-250000-dual.hex  MarlinUltimaker-250000.hex  MarlinUltimaker-HBK-115200-dual.hex  MarlinUltimaker-HBK-115200.hex  MarlinUltimaker-HBK-250000-dual.hex  MarlinUltimaker-HBK-250000.hex  MarlinUltimaker-UMOP-115200-dual.hex  MarlinUltimaker-UMOP-115200.hex  MarlinUltimaker-UMOP-250000-dual.hex  MarlinUltimaker-UMOP-250000.hex  MarlinUltimaker2-dual.hex  MarlinUltimaker2.hex  MarlinUltimaker2extended-dual.hex  MarlinUltimaker2extended-plus.hex  MarlinUltimaker2extended.hex  MarlinUltimaker2go.hex  MarlinUltimaker2plus.hex  commit-ids.txt  hashes.txt  sha1hashes.txt
cura/resources/i18n/7s/LC_MESSAGES/: fdmprinter.def.json.mo
cura/resources/i18n/cs_CZ/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/de/LC_MESSAGES/: cura.mo  cura_qt.qm  fdmextruder.def.json.mo  fdmprinter.def.json.mo  fdmprinter.json.mo  uranium.mo
cura/resources/i18n/de_DE/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/en/LC_MESSAGES/: cura.mo  cura_qt.qm  fdmextruder.def.json.mo  fdmprinter.def.json.mo  fdmprinter.json.mo  uranium.mo
cura/resources/i18n/en_7S/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/en_US/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/es/LC_MESSAGES/: cura.mo  cura_qt.qm  fdmextruder.def.json.mo  fdmprinter.def.json.mo  fdmprinter.json.mo
cura/resources/i18n/es_ES/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/fi/LC_MESSAGES/: cura.mo  cura_qt.qm  fdmextruder.def.json.mo  fdmprinter.def.json.mo  fdmprinter.json.mo  uranium.mo
cura/resources/i18n/fi_FI/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/fr/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo  fdmprinter.json.mo  uranium.mo
cura/resources/i18n/fr_FR/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/hu_HU/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/it/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo  fdmprinter.json.mo
cura/resources/i18n/it_IT/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/ja/LC_MESSAGES/: fdmprinter.def.json.mo
cura/resources/i18n/ja_JP/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/jp/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/ko/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/ko_KR/LC_MESSAGES/: cura.mo  fdmextruder.def.json.mo  fdmprinter.def.json.mo
cura/resources/i18n/nl/LC_MESSAGES/: cura.mo  (+3 more)
cura/resources/texts/whats_new/: 0.html  1.html  2.html  3.html  4.html  5.html  6.html
uranium/resources/: README.md
uranium/resources/i18n/ru/: uranium.mo
uranium/resources/shaders/: recolor_image.frag.qsb  recolor_image.vert.qsb
(+75 files in other folders)
